Remove deprecation warnings.